--- a/logging.conf
+++ b/logging.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root, Server, Client
+keys=root,Server,Client
 
 [handlers]
 keys=consoleHandler
@@ -8,11 +8,11 @@ keys=consoleHandler
 keys=simpleFormatter
 
 [logger_root]
-level=DEBUG
+level=INFO
 handlers=consoleHandler
 
 [logger_Server]
-level=DEBUG
+level=INFO
 handlers=consoleHandler
 qualname=Server
 propagate=0
@@ -25,10 +25,9 @@ propagate=0
 
 [handler_consoleHandler]
 class=StreamHandler
-level=DEBUG
+level=INFO
 formatter=simpleFormatter
 args=(sys.stdout,)
 
 [formatter_simpleFormatter]
 format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
-datefmt=
