--- a/logging.conf
+++ b/logging.conf
@@ -2,10 +2,14 @@
 keys=root,Server,Client
 
 [handlers]
-keys=consoleHandler
+keys=consoleHandler, fileHandlerServer, fileHandlerClient
 
 [formatters]
 keys=simpleFormatter
+
+###########
+# Loggers #
+###########
 
 [logger_root]
 level=INFO
@@ -13,21 +17,42 @@ handlers=consoleHandler
 
 [logger_Server]
 level=INFO
-handlers=consoleHandler
+handlers=consoleHandler, fileHandlerServer
 qualname=Server
 propagate=0
 
 [logger_Client]
 level=DEBUG
-handlers=consoleHandler
+handlers=consoleHandler, fileHandlerClient
 qualname=Client
 propagate=0
 
+################
+# Log Handlers #
+################
+
 [handler_consoleHandler]
 class=StreamHandler
-level=INFO
+level=DEBUG
 formatter=simpleFormatter
 args=(sys.stdout,)
+
+[handler_fileHandlerServer]
+class=FileHandler
+level=DEBUG
+formatter=simpleFormatter
+args=("server.log",)
+
+[handler_fileHandlerClient]
+class=FileHandler
+level=DEBUG
+formatter=simpleFormatter
+args=("client.log",)
+
+
+##################
+# Log Formatters #
+##################
 
 [formatter_simpleFormatter]
 format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
